--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "broccoli-funnel": "igorminar/broccoli-funnel#perf-files",
     "broccoli-lodash": "^0.1.1",
     "broccoli-merge-trees": "^0.2.1",
-    "broccoli-replace": "alexeagle/broccoli-replace#angular_patch",
     "broccoli-slow-trees": "^1.1.0",
     "broccoli-stew": "^0.2.1",
     "broccoli-writer": "^0.1.1",
@@ -93,6 +92,7 @@
     "marked": "^0.3.3",
     "merge": "^1.2.0",
     "merge2": "^0.3.5",
+    "minichain": "0.0.1",
     "minimatch": "^2.0.1",
     "minimist": "1.1.x",
     "mock-fs": "^2.5.0",
